--- a/app/templates/student_form.html
+++ b/app/templates/student_form.html
@@ -1,5 +1,21 @@
-<form method="POST"> {%csrf_token%}
-    Mã học sinh: <input value="{{ studentNo }}"  name="studentNo"> <br>
-    Tên: <input value="{{ name }}" name="name"> <br>
-    <button type="submit">Lưu lại</button>
-</form>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<div class="container mt-3">
+  <form method="POST" enctype="multipart/form-data"> {%csrf_token%}
+    <div class="form-group">
+      <label>Mã học sinh:</label>
+      <input class="form-control" value="{{ studentNo }}" name="studentNo">
+    </div>
+  
+    <div class="form-group">
+      <label>Tên:</label>
+      <input class="form-control" value="{{ name }}" name="name">
+    </div>
+  
+    <div class="form-group">
+      <label>Ảnh đại diện:</label>
+      <input class="form-control-file" type="file" name="image">
+    </div>  
+    <a href="{% url 'home' %}" class="btn btn-secondary">Quay lại</a>
+    <button class="btn btn-primary" type="submit">Lưu lại</button>
+  </form>
+</div>
